revert: use expressive-code for code blocks, fix code block overflow issues
This reverts commit 0c815ec693bbc42e3bfad79dd4db77990c590bb4.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,8 @@ a:hover {
   text-decoration: underline;
 }
 
-.expressive-code {
-  padding: 1em 0em;
-  width: 100%;
+/* For Shiki code blocks */
+pre {
+  margin: 0.5rem 0 16px;
+  padding: 1rem 1rem 1rem;
 }
